stacks/gaia-x-security/aas.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  labels:
    app: aas
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    app: aas
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  name: aas
  labels:
    app: aas
spec:
  containers:
    - name: aas
      image: oci.stackable.tech/sandbox/xfsc-aas:latest
      ports:
        - name: web
          containerPort: 9000
          protocol: TCP
