stacks/gaia-x-security/tsa-mock.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tsa
  template:
    metadata:
      labels:
        app: tsa
    spec:
      containers:
      - name: python
        image: python:3.9
        command: ["python", "/tsa.py"]
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 1
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: app-volume
          mountPath: /tsa.py
          subPath: tsa.py
      volumes:
      - name: app-volume
        configMap:
          name: tsa-config
---
apiVersion: v1
kind: Service
metadata:
  name: tsa
spec:
  selector:
    app: tsa
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
